--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,8 @@
     "nodemon": "^3.1.11",
     "path": "^0.12.7",
     "pdfkit": "^0.17.2",
-    "slugify": "^1.6.6"
+    "react-toastify": "^11.0.5",
+    "slugify": "^1.6.6",
+    "socket.io-client": "^4.8.3"
   }
 }
