--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "pdfkit": "^0.17.2",
     "react-toastify": "^11.0.5",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3"
   }
 }
