--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^3.1.11",
     "path": "^0.12.7",
     "pdfkit": "^0.17.2",
+    "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node-2.0.3.tgz",
     "react-toastify": "^11.0.5",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.3",
